infra/k8s/apps/base/namespace-database.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    app.kubernetes.io/name: database
    app.kubernetes.io/part-of: eks-app-mlops-platform
