infra/k8s/apps/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: eks-app-mlops-platform
